# Vienna-WebGPU-Engine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  imgui.ini  requirements.txt  todo.md  utils.cmake
.github/: copilot-instructions.md
doc/: BindGroupSystem.md  BuildingDawn.md  CorePrinciples.md  EngineArchitecture.md  GettingStarted.md  SpecShaderReflection.md  SpecShaderSystem.md  ToDo.md
doc/evaluation/: Evaluation.md
doc/evaluation/data/: derived_metrics.csv  h1_api_calls_vulkan.txt  h1_api_calls_webgpu.txt  h1_loc_api_comparison.csv  h2_study_level_summary.csv  h2_study_level_test.csv  h3_likert_distribution_q26_q33.csv  h3_likert_stacked_wide.csv  h3_study_level_summary.csv  h3_study_level_test.csv  hypothesis_results.csv  long_dataset copy.csv  paired_dataset.csv  participant_gain_ranking.csv  question_metadata.csv  reliability_blocks.csv  study_group_counts_masterphd_vs_others.csv  study_level_counts.csv  thesis_composite_distribution.md  thesis_composite_paired_lines.md  thesis_delta_heatmap.md  thesis_overall_average_increase.md  thesis_participant_change_line.md  thesis_selected_question_increase.md  thesis_study_fields.md  thesis_topic_increase.md  thesis_topic_pre_post_grouped.md  thesis_tutorial_completion_increase.md  thesis_useful_ratings.md  topic_boxplot_stats.csv  topic_pre_post_long.csv
doc/tutorials/: 01_unlit_shader.html  01_unlit_shader.md  02_custom_bindgroup.html  02_custom_bindgroup.md  03_shadow_mapping.html  03_shadow_mapping.md  04_postprocessing.html  04_postprocessing.md
examples/: README.md  build.bat
examples/game_engine_example/: main.cpp
examples/hello-webgpu/: main.cpp
examples/main_demo/: CMakeLists.txt  DayNightCycle.h  MainDemoImGuiUI.cpp  MainDemoImGuiUI.h  OrbitCamera.cpp  OrbitCamera.h  main..cpp  main.cpp
examples/multi_view/: CMakeLists.txt  CameraSwitcher.cpp  CameraSwitcher.h  FreeFlyCamera.cpp  main.cpp
examples/reflection_test/: CMakeLists.txt  main.cpp
examples/scene_editor/: CMakeLists.txt
examples/tutorial/: CMakeLists.txt  CustomRenderNode.h  FreeFlyCamera.h  main.cpp
examples/tutorial/assets/shaders/: unlit.wgsl  unlit_custom.wgsl  unlit_shadow.wgsl
include/engine/: Application.h  EngineContext.h  EngineMain.h  GameEngine.h  GameEngineOptions.h  NodeSystem.h  stb_image.h
include/engine/core/: Enum.h  GameComponent.h  GameEngine.h  Handle.h  Identifiable.h  Identifiable.inl  InputManager.h  PathProvider.h  PhysicsEngine.h  RenderBufferManager.h  RenderState.h  Versioned.h
include/engine/debug/: Loggable.h
include/engine/game/: GameComponent.h
include/engine/input/: InputManager.h
include/engine/io/: FileReader.h  tiny_obj_loader.h
include/engine/lighting/: LightManager.h
include/engine/math/: AABB.h  CoordinateSystem.h  Frustum.h  Rect.h
include/engine/physics/: PhysicsEngine.h
include/engine/rendergraph/: RenderGraph.h
include/engine/rendering/: BindGroupBinder.h  BindGroupDataProvider.h  BindGroupEnums.h  BindGroupLayout.h  CacheStats.h  Camera.h  ClearFlags.h  ClusterManager.h  ColorSpace.h  CompositePass.h  CompositionPass.h  DebugCollector.h  DebugPass.h  DebugRenderCollector.h  EnvironmentUniforms.h  ForwardTransparencyPass.h  FrameCache.h  FrameProfiler.h  FrameUniforms.h  GBufferPass.h  Light.h  LightUniforms.h  Material.h  MaterialFeatureMask.h  Mesh.h  MeshPass.h  Model.h  ObjectUniforms.h  PipelineManager.h  PostProcessingPass.h  RenderBufferManager.h  RenderCollector.h  RenderItemGPU.h  RenderPass.h  RenderPassManager.h  RenderProxies.h  RenderState.h  RenderTarget.h  Renderer.h  RenderingConstants.h  (+11 more)
include/engine/resources/: GeometryLoader.h  GltfGeometryData.h  GltfLoader.h  Image.h  MaterialManager.h  MeshManager.h  ModelManager.h  ObjGeometryData.h  ObjLoader.h  ResourceManager.h  ResourceManagerBase.h  TextureLoader.h  TextureManager.h
include/engine/scene/: CameraNode.h  LightNode.h  Scene.h  SceneManager.h  SpatialNode.h  Transform.h
include/engine/shadergraph/: Graph.h  MaterialTemplate.h  Nodes.h
include/engine/ui/: ImGuiManager.h
profiles/: Emscripten  Windows
resources/: PBR_Lit_Shader copy.wgsl  PBR_Lit_Shader.wgsl  cylinder.mtl  debug.wgsl  deferred_composition.wgsl  floor.mtl  fourareen.mtl  fullscreen_quad.wgsl  g_buffer.wgsl  light_clustering.wgsl  mipmap_blit.wgsl  postprocess_vignette.wgsl  shader.wgsl  shadow2d.wgsl  shadow3d.wgsl  skybox.wgsl  visualize_depth.wgsl
resources/robot/: license.txt  robot.mtl
resources/shaders/: PBR_Lit_Shader.wgsl  brdf_lut.wgsl  debug.wgsl  deferred_composition.wgsl  depth_preview.wgsl  env_irradiance.wgsl  env_prefilter.wgsl  fullscreen_quad.wgsl  g_buffer.wgsl  light_clustering.wgsl  mipmap_blit.wgsl  postprocess_vignette.wgsl  shadow2d.wgsl  shadow3d.wgsl  skybox.wgsl  visualize_depth.wgsl
resources/shaders/core/: cluster_light_list.wgsl  constants_cluster.wgsl  environment_uniforms.wgsl  frame_uniforms.wgsl  light_struct.wgsl  lights_buffer.wgsl  material.wgsl  object_uniforms.wgsl  scene_bindings.wgsl  shadow_uniform.wgsl
resources/shaders/lib/: clustering.wgsl  direct_lighting.wgsl  lighting.wgsl  shadow.wgsl
scripts/: build-example.bat  build-example.sh  build.bat  build.sh  get_cl_path.bat  gltf_to_obj_texture.py  launch-vsdevcmd.bat  run-clang-tidy.ps1  run-clang-tidy.sh  run_screenshot.ps1
src/: Application.cpp  Application.h  ResourceManager.cpp  ResourceManager.h  engine.h  imgui.ini  implementations.cpp  main.cpp  shell_minimal.html
src/engine/: Application.cpp  Application.cpp_old  GameEngine.cpp  implementations.cpp
src/engine/core/: GameEngine.cpp  Identifiable.cpp  InputManager.cpp  PathProvider.cpp  PhysicsEngine.cpp  RenderBufferManager.cpp
src/engine/debug/: Loggable.h
src/engine/input/: InputManager.cpp
src/engine/io/: FileReader.cpp  GeometryLoader.cpp  GeometryLoader.h  GltfLoader.h  ObjLoader.cpp  ObjLoader.h
src/engine/lighting/: LightManager.cpp
src/engine/math/: CoordinateSystem.cpp
src/engine/physics/: PhysicsEngine.cpp
src/engine/rendergraph/: RenderGraph.cpp
(+178 files in other folders)
